# oeleo

./: .aliases  .env_example  .gitignore  .readthedocs.yaml  AGENTS.md  LICENSE  LICENSE.md  README.md  checkers.py  connectors.py  docker-compose.yml  filter.py  filters.py  install_task.ps1  main.py  models.py  movers.py  noxfile.py  pyproject.toml  requirements.txt  workers.py  zensical.toml
.cursor/rules/: issueflow-rules.mdc
.github/: dependabot.yml
.github/workflows/: tests.yml
.issueflows/01-current-issues/: issue12_original.md  issue12_plan.md  issue12_status.md  issue17_status.md  issue18_plan.md  issue18_status.md  issue32_original.md  issue32_plan.md  issue32_status.md  issue33_original.md  issue39_original.md  issue39_plan.md  issue39_status.md  issue8_original.md  issue8_status.md
.issueflows/02-partly-solved-issues/: issue8_plan.md  issue8_status.md
.issueflows/03-solved-issues/: issue11_original.md  issue11_plan.md  issue11_status.md  issue12_status.md  issue13_original.md  issue13_plan.md  issue13_status.md  issue17_original.md  issue17_plan.md  issue17_status.md  issue18_original.md  issue18_status.md  issue19_original.md  issue19_plan.md  issue19_status.md  issue31_original.md  issue31_plan.md  issue31_status.md  issue32_status.md  issue33_plan.md  issue33_status.md  (+14 more)
app/: config.json  notes.md  oa.pyw  readme.md
check/: developers_playground.py
docs/: configuration.md  database.md  development.md  index.md  install.md  requirements.txt  usage.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
notes/: __from_old_script.py  notes-for-me.md
oeleo/: __init__.py  checkers.py  connectors.py  console.py  filters.py  layouts.py  main.py  models.py  movers.py  reporters.py  schedulers.py  utils.py  workers.py
tests/: .testenv  README.md  conftest.py  test_connector_cleanup_hooks.py  test_connector_errors.py  test_filter_local_materialize.py  test_oeleo.py  test_register_password.py  test_schedulers.py  test_ssh_integration.py  test_ssh_optional_password.py  test_ssh_shell_safety.py  test_worker_reporter_default.py
(+25 files in other folders)
