[project]
name = "oeleo"
version = "0.7.0"
description = "A one-eyed tool to copy files with."
authors = [{ name = "jepegit", email = "jepe@ife.no" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
keywords = ["ssh", "db"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Topic :: Communications :: File Sharing",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "peewee",
    "python-dotenv>=1.2.2",
    "rich",
    "Fabric",
    "SharePlum",
]

[project.urls]
Homepage = "https://github.com/ife-bat/oeleo"
Repository = "https://github.com/ife-bat/oeleo"

[project.optional-dependencies]
all = [
    "pystray>=0.19.5,<0.20.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
log_cli = true
log_cli_level = "DEBUG"
markers = ["slow", "ssh"]

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.42.0,<3.0.0",
    "black>=26.3.1",
    "isort>=5.10.1,<9.0.0",
    "pytest>=9.0.3",
    "nox>=2023.4.22,<2027.0.0",
]
